Updated CSS + Fixed navbar on mobile devices + Changes on Survey Page

--- a/finah-web/css/customBootstrap.css
+++ b/finah-web/css/customBootstrap.css
@@ -1,11 +1,4 @@
 @import url("//fonts.googleapis.com/css?family=Open+Sans:400,700");
-/*!
- * bootswatch v3.3.4+1
- * Homepage: http://bootswatch.com
- * Copyright 2012-2015 Thomas Park
- * Licensed under MIT
- * Based on Bootstrap
-*/
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -6706,30 +6699,58 @@ label {
 }
 
 #formMargin {
-  margin-top: 35px;
+  	margin-top: 35px;
 }
 
 #buttonMargin {
-  margin-top: 15px;
+  	margin-top: 15px;
 }
 
 #rowTopMargin50px {
-  margin-top: 50px;
+  	margin-top: 50px;
 }
 
 #rowTopBottomMargin50px {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  	margin-top: 50px;
+  	margin-bottom: 50px;
 }
 
 #vraagid {
-  visibility: hidden;
-  height: 0px;
-  margin: 0px;
-  border: 0px;
-  padding: 0px;
+	visibility: hidden;
+	height: 0px;
+	margin: 0px;
+	border: 0px;
+	padding: 0px;
+}
+
+.navbar-default {
+	border-color: #25A8EC;
+	border-width: 0px 0px 1px 0px;
+}
+
+.navbar-default .navbar-nav .active a { 
+	color: #25A8EC;
+}
+
+.navbar-default .navbar-nav .active a:hover { 
+	color: #25A8EC;
+}
+
+.navbar-default .navbar-nav .active a:active { 
+	color: #25A8EC;
+}
+
+.navbar-default .navbar-nav li a:hover { 
+	color: #25A8EC;
+}
+
+.navbar-default .navbar-nav li a:active { 
+	color: #25A8EC;
 }
 
 legend {
-  padding-left: 15px;
+  	padding-left: 15px;
+  	border-bottom-width: 1px;
+  	border-bottom-style: solid;
+  	border-bottom-color: rgba(37, 168, 236, 0.4);
 }
